examples/test/testpolicy862.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy862
  namespace: namespace428
spec:
  podSelector:
    matchLabels:
      key41: value6
      key14: value46
      key0: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value48
      podSelector:
        matchLabels:
          key38: value25
          key8: value27
          key28: value36
